--- a/apps/sharelist/pages/styles.css
+++ b/apps/sharelist/pages/styles.css
@@ -99,7 +99,7 @@ pre {
   color: rgba(55, 65, 81, 1);
   display: grid;
   grid-template-columns: 1fr;
-  margin-top: .5rem;
+  margin-top: 1rem;
 }
 #hero .text-container {
   color: rgba(255, 255, 255, 1);
