Add link to the top of each list

--- a/apps/sharelist/pages/styles.css
+++ b/apps/sharelist/pages/styles.css
@@ -134,6 +134,7 @@ pre {
 }
 #hero .logo-container {
   display: flex;
+  cursor: pointer;
   justify-content: center;
   padding-left: 2rem;
   padding-right: 2rem;
