--- a/apps/sharelist/pages/styles.css
+++ b/apps/sharelist/pages/styles.css
@@ -68,7 +68,7 @@ pre {
 .container {
   margin-left: auto;
   margin-right: auto;
-  max-width: 768px;
+  max-width: 1000px;
   padding-bottom: 3rem;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -197,8 +197,11 @@ pre {
   transition-duration: 150ms;
   width: 100%;
 }
+.list-item-link.small {
+  padding: 0;
+  margin: 0;
+}
 .list-item-link svg:first-child {
-  margin-right: 1rem;
   height: 1.5rem;
   transition-property: background-color, border-color, color, fill, stroke,
     opacity, box-shadow, transform, filter, backdrop-filter,
@@ -240,15 +243,15 @@ pre {
   color: rgba(255, 255, 255, 1);
   background-color: hsla(162, 47%, 50%, 1);
 }
-.list-item-link:hover > span {
-}
-.list-item-link:hover > span > span {
+.list-item-link > span > span:hover {
   color: rgba(243, 244, 246, 1);
 }
-.list-item-link:hover svg:last-child {
-  transform: translateX(0.25rem);
+.list-item-link button svg:hover {
+  color: rgb(175, 175, 175);
 }
-#other-links {
+.list-item-link.checked {
+  color: rgb(175, 175, 175);
+  text-decoration: line-through;
 }
 .button-pill {
   padding: 1.5rem 2rem;
@@ -413,7 +416,7 @@ summary svg {
   display: inline;
   margin-top: -0.25rem;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1000px) {
   #hero {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
